--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Anıl Korkmaz - Software Engineer"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
